Добавлена страница гребаного профиля
Добавлена страница (только скелет с меню) и ассеты. Также изменен путь для файла стилей страницы creation_of_event

--- a/Frontend/html/creation_of_event.html
+++ b/Frontend/html/creation_of_event.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Создание мероприятия</title> <link rel="stylesheet" href="creation-style.css">
+    <title>Создание мероприятия</title> <link rel="stylesheet" href="../css/creation-style.css">
 
 </head>
 <body>
