--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8">
-      <title>Авторизация</title>
+      <title>Мой профиль</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="../css/profile-style.css">
@@ -15,7 +15,7 @@
           <a href="#" class="menu-btn"></a>
           <nav class="container menu-list">
             <div class="btn">
-                <div class="description"><a href="#">Главная</a></div>
+                <div class="description"><a href="#">Мой профиль</a></div>
                 <div class="icon"><a href="#"><img src="../assets/home.png"></a></div>
             </div>
             <div class="btn">
@@ -41,8 +41,22 @@
             </div>
           </nav>
         </div>
-        <div class="content">
-          main content
+        <div class="container content">
+          <div class="row base-info">
+            <img src="../assets/photo.png" alt="" class="col-sm-6 col-md-3 photo">
+            <div class="col-6 md-col-2 fio"> 
+              <h3 class="row">Евгений</h3>
+              <h2 class="row">Топаев</h2>
+              <h3 class="row">05.09.1983</h3>
+              <div class="row w-75 logo"> 
+                <img src="../assets/logo_club.png" alt="logo_club" class="col-10 col-md-6">
+              </div>
+            </div>
+            <div class="belt-id col-12 col-md-3">
+              <img src="../assets/black_belt.jpg" alt="belt" class="col-5 col-md-12">
+              <button class="col-4 col-md-12">ID #0001</button>
+            </div>
+          </div>
         </div>
       </div>
   </body>
