исправлена проблема "плавания" с меню

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -15,28 +15,28 @@
           <a href="#" class="menu-btn"></a>
           <nav class="container menu-list">
             <div class="btn">
-                <div class="description"><a href="#">Мой профиль</a></div>
+                <div class="description"><a href="#" class="text-a">Мой профиль</a></div>
                 <div class="icon"><a href="#"><img src="../assets/home.png"></a></div>
             </div>
             <div class="btn">
-                <div class="description"><a href="#">Семинары</a></div>
+                <div class="description"><a href="#" class="text-a">Семинары</a></div>
                 <div class="icon"><a href="#"><img src="../assets/competition.png"></a></div>
             </div>
             <div class="btn">
-                <div class="description"><a href="#">Статьи</a></div>
+                <div class="description"><a href="#" class="text-a">Статьи</a></div>
                 <div class="icon"><a href="#"><img src="../assets/articles.png"></a></div>
             </div>
             <div class="btn">
-                <div class="description"><a href="#">Контакты</a></div>
+                <div class="description"><a href="#" class="text-a">Контакты</a></div>
                 <div class="icon"><a href="#"><img src="../assets/contacts.png"></a></div>
             </div>
             <div class="btn">
-                <div class="description"><a href="#">Служебная</a></div>
+                <div class="description"><a href="#" class="text-a">Служебная</a></div>
                 <div class="icon"><a href="#"><img src="../assets/service.png"></a></div>
             </div>
             <img id="logo" src="../assets/logo_federation.png" alt="LOGO">
             <div class="exit-btn">
-                <div class="description"><a href="#">Выйти</a></div>
+                <div class="description"><a href="#" class="text-a">Выйти</a></div>
                 <div class="icon"><a href="#"><img src="../assets/exit-icon.png"></a></div>
             </div>
           </nav>
