Добавлен блок достижений на страницу профиля

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -57,6 +57,156 @@
               <button class="col-4 col-md-12">ID #0001</button>
             </div>
           </div>
+          <div class="row container achievment">
+            <h2 class="row">История достижений</h2>
+
+            <div class="row achievment-table">
+
+              <div class="col-12 col-md-4">
+                <h3>Профессионал</h3>
+                <div class="achievment-block row">
+                  <div class="achievment-name col-3">
+                    1 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name col-3">
+                    2 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name col-3">
+                    3 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name col-3">
+                    4 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col-12 col-md-4">
+                <h3>Взрослый уровень</h3>
+                <div class="achievment-block row">
+                  <div class="achievment-name ku-1 col-3">
+                    1 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name ku-2 col-3">
+                    2 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name ku-3 col-3">
+                    3 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name ku-4 col-3">
+                    4 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name ku-5 col-3">
+                    5 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12 col-md-4">
+                <h3>Детский уровень</h3>
+                <div class="achievment-block not-reached row">
+                  <div class="achievment-name ku-1 col-3">
+                    1 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block not-reached row">
+                  <div class="achievment-name ku-2 col-3">
+                    2 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block not-reached row">
+                  <div class="achievment-name ku-3 col-3">
+                    3 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name ku-4 col-3">
+                    4 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+                <div class="achievment-block row">
+                  <div class="achievment-name ku-5 col-3">
+                    5 кю
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p id="name">Название мероприятия</p>
+                    <p id ="date">12.12.12</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="seminar-table">
+                
+              </div>
+
+            </div>            
+          </div>
         </div>
       </div>
   </body>
