В профиль добавлена таблица с мероприятиями

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -200,13 +200,26 @@
                   </div>
                 </div>
               </div>
+            </div> 
+          </div>           
 
-              <div class="seminar-table">
-                
-              </div>
-
-            </div>            
+          <div class="seminar-table">
+            <table>
+              <tr>
+                <td class="heading">Дата</td>
+                <td class="heading unvisible bordered">Город</td>
+                <td class="heading unvisible bordered">Ответственный клуб</td>
+                <td  class="heading">Результат</td>
+              </tr>
+              <tr>
+                <td>25.12.2019</td>
+                <td class="unvisible bordered">Екатеринбург</td>
+                <td class="unvisible bordered">Прайм</td>
+                <td>1 дан</td>
+              </tr>
+            </table>
           </div>
+          
         </div>
       </div>
   </body>
