Улучшена страница создания мероприятия

--- a/Frontend/html/creation_of_event.html
+++ b/Frontend/html/creation_of_event.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Создание мероприятия</title> <link rel="stylesheet" href="../css/creation-style.css">
-
 </head>
 <body>
     <div class="container">
@@ -11,17 +10,17 @@
             Создание мероприятия
         </div>
         <div>
-            <input type="text" name="event_title" value="Название мероприятия">
+            <input type="text" name="event_title" placeholder="Название мероприятия">
         </div>
         <div class="dAndL">
-            <div><input type="date" class="date" name="date" value="Дата"></div>
-            <div> <input type="text" class="location" name="location" value="Место"></div>
+            <div><input type="date" class="date" name="date" placeholder="Дата"></div>
+            <div> <input type="text" class="location" name="location" placeholder="Место"></div>
         </div>
         <div>
-            <input type="text" class="rc" name="resp_club" value="Ответственный клуб">
+            <input type="text" class="rc" name="resp_club" placeholder="Ответственный клуб">
         </div>
         <div>
-            <input type="text" class="lc" name="lead_coach" value="ФИО ведущего тренера">
+            <input type="text" class="lc" name="lead_coach" placeholder="ФИО ведущего тренера">
         </div>
         <div>
             <button type="button" class="bordered" name="create">Создать</button>
