добавил переход между страницами
Добавил переход между страницей админа и страницей создания мероприятия по нажатию на кнопку

--- a/Frontend/html/admin-page-main.html
+++ b/Frontend/html/admin-page-main.html
@@ -16,7 +16,8 @@
                 </p>
 
                 <div class="col-3 ">
-                    <button type="button" name="create_events" class="create_events">Создать мероприятия</button>
+                    <button type="button" name="create_events" class="create_events" onClick='location.href="creation_of_event.html"'>Создать мероприятие</button>
+
                 </div>
         </div>
         <div class="bordered">
