--- a/Frontend/html/creation_of_event.html
+++ b/Frontend/html/creation_of_event.html
@@ -7,7 +7,7 @@
 <body>
     <div class="container">
         <div class="heading">
-            Создание мероприятия
+            Создание мероприятие
         </div>
         <div>
             <input type="text" name="event_title" placeholder="Название мероприятия">
