реализована отправка данных по форме

--- a/Frontend/html/authorization.html
+++ b/Frontend/html/authorization.html
@@ -10,7 +10,7 @@
 <body>
     <div class="row">
         <div class="col-sm-12 col-md-8">
-            <form action="seminar_statistic.html" class="enter-form">
+            <form action="#" class="enter-form" id="login-form">
                 <h1>Авторизация</h1>
                 <input type="text" placeholder="ID пользователя" id = "id" class="input-field row">
                 <input type="password" placeholder="Пароль" id = "pass" class="input-field row">
@@ -24,4 +24,5 @@
         </div>
     </div>
 </body>
+<script src="../js/auth.js"></script>
 </html>
