добавил всплывающую надпись при неверном пароле

--- a/Frontend/html/authorization.html
+++ b/Frontend/html/authorization.html
@@ -14,6 +14,7 @@
                 <h1>Авторизация</h1>
                 <input type="text" placeholder="ID пользователя" id = "id" class="input-field row">
                 <input type="password" placeholder="Пароль" id = "pass" class="input-field row">
+                <p class="error-message hide">Неверная связка id/пароль</p>
                 <input type="submit" value="Войти" class="enter-button row">
             </form>
         </div>
