--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/service-page-style.css">
+    <link rel="stylesheet" href="../css/menu-style.css">
 </head>
 <body>
     <div class="wrapper">
