--- a/Frontend/html/service_page.html
+++ b/Frontend/html/service_page.html
@@ -40,7 +40,7 @@
             </nav>
         </div>
         <div>
-            <div class="container">
+            <div class="storage">
                 <div class="row base-info">
                     <div class="col-6 md-col-2 fio">
                         <h3 class="row">Евгений</h3>
@@ -91,7 +91,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="storage">
             <div class="row justify-content-center">
                 <p class="col-5 heading ">
                     Предстоящие семинары
@@ -127,7 +127,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="storage">
             <div class="row justify-content-center">
                 <div class="col-5 heading">
                     Прошедшие семинары
@@ -150,7 +150,7 @@
                 </table>
             </div>
         </div>
-        <div class="container">
+        <div class="storage">
             <div class="row justify-content-center">
                 <div class="col-4 heading">
                     Список учеников
