Сделаны небольшие улучшения страниц

--- a/Frontend/html/adding_new_members.html
+++ b/Frontend/html/adding_new_members.html
@@ -86,7 +86,7 @@
                     <input type="button" class="delete_butt" onclick="remove_value_f()" value="Удалить поля"/>
                 </form>
                 <div class="col-md-4">
-                    <button type="button" class="bordered" name="add_to_application">Добавить в заявку</button>
+                    <button type="button" class="add_to_applic" name="add_to_application">Добавить в заявку</button>
                 </div>
             </div>
         </div>
