--- a/Frontend/html/creation_of_event.html
+++ b/Frontend/html/creation_of_event.html
@@ -13,8 +13,10 @@
             <input type="text" name="event_title" id="event_title" placeholder="Название мероприятия">
         </div>
         <div class="dAndL">
-            <div><input type="date" class="date" name="date_start" id="date_start" placeholder="Дата"></div>
-            <div><input type="date" class="date" name="date_end" id="date_end" placeholder="Дата"></div>
+            <div><input type="date" class="date" name="date_start" id="date_start" placeholder="Дата начала"></div>
+            <div><input type="date" class="date" name="date_end" id="date_end" placeholder="Дата окончания"></div>
+        </div>
+        <div>
             <div> <input type="text" class="location" name="location" id="location" placeholder="Место"></div>
         </div>
         <div>
@@ -24,7 +26,7 @@
             <input type="text" class="lc" name="lead_coach" id="lead_coach" placeholder="ФИО ведущего тренера">
         </div>
         <div>
-            <button type="button" class="bordered" name="create" id="create">Создать</button>
+            <button type="button" class="create_butt" name="create" id="create">Создать</button>
         </div>
     </div>
 
