Добавлено название в страницу меро и таблицу

--- a/Frontend/html/admin-page-main.html
+++ b/Frontend/html/admin-page-main.html
@@ -22,6 +22,7 @@
         </div>
         <div class="bordered">
             <div class="row align-items-start" id="coming-activities-header">
+                 <div class="col">Название</div>
                 <div class="col">
                     Дата
                 </div>
@@ -47,6 +48,7 @@
         </div>
         <div class="bordered">
             <div class="row align-items-start" id="preview-activities-header">
+                <div class="col">Название</div>
                 <div class="col">
                     Дата
                 </div>
