--- a/Frontend/html/seminar_statistic.html
+++ b/Frontend/html/seminar_statistic.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="container seminar-info">
-        <p>Семинар 25-26 декабря 2021 года</p>
+        <h1>Х центральный семинар по прикладному айкидо</h1>
+        <p>Дата: <span class="changeable-params">25-26 декабря 2021 года</span></p>
         <p>Место: <span class="changeable-params">г. Екатеринбург</span></p>
         <p>Количество заявленных участников: <span class="changeable-params">111</span></p>
         <p>Окончание записи через сайт: <span class="changeable-params">24.12.2021 23:59:59</span></p>
